<?xml version="1.0"?>
<package>
  <name>gtm_animation_msgs</name>
  <version>0.0.0</version>
  <description>The gtm_animation_msgs package. Contains animation msg definitions</description>
  <maintainer email="qaston@gmail.com">Dariusz Antoniuk</maintainer>
  <author email="qaston@gmail.com">Dariusz Antoniuk</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <export>
  </export>
</package>