<?xml version="1.0"?>
<package>
  <name>gtm_led_control</name>
  <version>0.1.0</version>
  <description>The gtm_led_control package. Provides high level controlls of the led display.</description>
  <maintainer email="qaston@gmail.com">Dariusz Antoniuk</maintainer>
  <author email="qaston@gmail.com">Dariusz Antoniuk</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gtm_animation_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gtm_animation_msgs</run_depend>
  <export>
  </export>
</package>