<?xml version="1.0"?>
<package>
  <name>gtm_openpixelcontrol_server_fadecandy</name>
  <version>0.1.0</version>
  <description>The gtm_openpixelcontrol_server_fadecandy package. Provides a facecandy server node which uses openpixelcontrol protocol for controlling LEDs.</description>
  <maintainer email="qaston@gmail.com">Dariusz Antoniuk</maintainer>
  <author email="qaston@gmail.com">Dariusz Antoniuk</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>fadecandy</run_depend>
  <export>
  </export>
</package>